# whisper-asr

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  asr_jni.cpp
app/src/main/java/com/example/crystalasr/: AsrListener.java  AsrNative.java  MainActivity.java  StreamingRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
